--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,14 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pych9329-hid"
-version = "0.1.0"
+version = "0.1.3"
 description = "PyCH9329-HID is a high-level Python package for CH9329 HID chip, designed to provide seamless, OS-independent peripheral control via serial communication."
 readme = "README.md"
 requires-python = ">=3"
 license = "MIT"
 license-files = ["LICENSE"]
 authors = [
-    {name = "zonghai", email = "zonghai@gmail.com"}
+    {name = "zonghai-li", email = "zonghai@gmail.com"}
 ]
 keywords = ["ch9329", "usb", "hid", "serial"]
 classifiers = [
@@ -19,15 +19,17 @@ classifiers = [
     "Intended Audience :: Developers",
     "Programming Language :: Python :: 3"
 ]
+dependencies = [
+    "pyserial>=3.0"
+]
 
 [project.urls]
-Homepage = "https://github.com/zonghai/pych9329-hid"
-Repository = "https://github.com/zonghai/pych9329-hid"
-Issues = "https://github.com/zonghai/pych9329-hid/issues"
+Homepage = "https://github.com/zonghai-li/pych9329-hid"
+Repository = "https://github.com/zonghai-li/pych9329-hid"
+Issues = "https://github.com/zonghai-li/pych9329-hid/issues"
 
 [tool.setuptools.packages.find]
 where = ["src"]
-include = ["*"]
 
 [tool.black]
 line-length = 88
